--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,11 +8,11 @@
 <body>
     <h1> Xin Chào <%= name %> </h1>
     <a href="/user"> User </a>
-    <form action="/add" method="POST">
+    <form action="/add" method="post">
         <br><br>
-        <input type="text"  placeholder="Thêm tên bạn">
+        <input type="text" name="name" placeholder="Thêm tên bạn">
         <br><br>
-        <input type="text" placeholder="Thêm tuổi bạn">
+        <input type="text" name="age" placeholder="Thêm tuổi bạn">
         <br><br>
         <button> Add </button>
     </form>
